--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=1" />
     <link rel="manifest" href="/site.webmanifest?=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light">
+    <meta name="theme-color" content="#0b0b0b" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Ebenezer Bakersfield Alabanza</title>
   </head>
   <body>
